--- a/CenaPlus.Server/ServerMode/ServerSettings/Circulars.xaml
+++ b/CenaPlus.Server/ServerMode/ServerSettings/Circulars.xaml
@@ -29,7 +29,7 @@
                 <Paragraph/>
             </FlowDocument>
         </RichTextBox>
-        <Button Content="Save changes" VerticalAlignment="Bottom"></Button>
+        <Button x:Name="btnSave" Content="Save changes" VerticalAlignment="Bottom" Click="btnSave_Click"></Button>
         <StackPanel Orientation="Horizontal" VerticalAlignment="Top">
             <Button Style="{StaticResource formatTextStyle}" Height="30" Command="EditingCommands.ToggleBold" ToolTip="Bold">
                 <TextBlock FontWeight="Bold"><Run Text="B"/></TextBlock>
