--- a/CenaPlus.Server/ServerMode/Contest/Contest.xaml
+++ b/CenaPlus.Server/ServerMode/Contest/Contest.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CenaPlus.Server.ServerMode.Contest.Main"
+﻿<UserControl x:Class="CenaPlus.Server.ServerMode.Contest.Contest"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,9 +12,11 @@
             <mui:ModernTab.Links>
                 <!-- TODO: set @Source -->
                 <mui:Link DisplayName="General" Source="/ServerMode/Contest/General.xaml" />
+                <mui:Link DisplayName="Description" Source="/ServerMode/Contest/Description.xaml" />
                 <mui:Link DisplayName="Problems" Source="/ServerMode/Contest/Problem.xaml"/>
                 <mui:Link DisplayName="Rank List" Source="/ServerMode/Contest/Rank.xaml"/>
                 <mui:Link DisplayName="Print Requests" Source="/ServerMode/Contest/Print.xaml"/>
+                <mui:Link DisplayName="Questions" Source="/ServerMode/Contest/Questions.xaml"/>
             </mui:ModernTab.Links>
         </mui:ModernTab>
     </Grid>
