--- a/CenaPlus.Server/ServerMode/Contest/Contest.xaml
+++ b/CenaPlus.Server/ServerMode/Contest/Contest.xaml
@@ -7,16 +7,21 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Style="{StaticResource ContentRoot}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="27*"/>
+            <RowDefinition Height="37*"/>
+        </Grid.RowDefinitions>
         <!-- TODO: set @SelectedSource -->
-        <mui:ModernTab Layout="List" SelectedSource="/ServerMode/Contest/General.xaml">
+        <mui:ModernTab Layout="List" SelectedSource="/ServerMode/Contest/General.xaml" Grid.RowSpan="2">
             <mui:ModernTab.Links>
                 <!-- TODO: set @Source -->
                 <mui:Link DisplayName="General" Source="/ServerMode/Contest/General.xaml" />
                 <mui:Link DisplayName="Description" Source="/ServerMode/Contest/Description.xaml" />
-                <mui:Link DisplayName="Problems" Source="/ServerMode/Contest/Problem.xaml"/>
+                <mui:Link DisplayName="Problems" Source="/ServerMode/Contest/ProblemList.xaml"/>
+                <mui:Link DisplayName="Status" Source="/ServerMode/Contest/Status.xaml"/>
                 <mui:Link DisplayName="Rank List" Source="/ServerMode/Contest/Rank.xaml"/>
-                <mui:Link DisplayName="Print Requests" Source="/ServerMode/Contest/Print.xaml"/>
                 <mui:Link DisplayName="Questions" Source="/ServerMode/Contest/Questions.xaml"/>
+                <mui:Link DisplayName="Print Requests" Source="/ServerMode/Contest/Print.xaml"/>
             </mui:ModernTab.Links>
         </mui:ModernTab>
     </Grid>
