--- a/CenaPlus.Server/ServerMode/Home.xaml
+++ b/CenaPlus.Server/ServerMode/Home.xaml
@@ -19,7 +19,7 @@
                 <TextBlock Text="Cena+ port" Margin="0,0,0,5"></TextBlock>
                 <TextBox x:Name="txtLocalPort" Margin="0,0,0,10" Text="9980"></TextBox>
                 <TextBlock Text="MySQL Mode" Margin="0,0,0,5"></TextBlock>
-                <ComboBox x:Name="lstMySqlMode" Margin="0,0,0,10" SelectionChanged="lstMySqlMode_SelectionChanged">
+                <ComboBox x:Name="lstMySqlMode" Margin="0,0,0,10" SelectionChanged="lstMySqlMode_SelectionChanged" SelectedIndex="0">
                     <ListBoxItem Content="Embedded"/>
                     <ListBoxItem Content="External"/>
                 </ComboBox>
