--- a/CenaPlus.Server/ServerMode/Contest/Problem/Problem.xaml
+++ b/CenaPlus.Server/ServerMode/Contest/Problem/Problem.xaml
@@ -14,9 +14,9 @@
                 <mui:Link DisplayName="General" Source="/ServerMode/Contest/Problem/General.xaml" />
                 <mui:Link DisplayName="Content" Source="/ServerMode/Contest/Problem/Content.xaml" />
                 <mui:Link DisplayName="Test cases" Source="/ServerMode/Contest/Problem/TestCases.xaml" />
-                <mui:Link DisplayName="SPJ" Source="/ServerMode/Contest/Problem/SpecialJudge.xaml" />
-                <mui:Link DisplayName="Range validator" Source="/ServerMode/Contest/Problem/RangeValidator.xaml" />
-                <mui:Link DisplayName="Std source" Source="/ServerMode/Contest/Problem/StandardSource.xaml" />
+                <mui:Link DisplayName="SPJ" Source="/ServerMode/Contest/Problem/Code.xaml#SPJ" />
+                <mui:Link DisplayName="Range validator" Source="/ServerMode/Contest/Problem/Code.xaml#RangeValidator" />
+                <mui:Link DisplayName="Std source" Source="/ServerMode/Contest/Problem/Code.xaml#StdSource" />
             </mui:ModernTab.Links>
         </mui:ModernTab>
     </Grid>
