--- a/CenaPlus.Server/ServerMode/Contest/Problem/Code.xaml
+++ b/CenaPlus.Server/ServerMode/Contest/Problem/Code.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Style="{StaticResource ContentRoot}">
-        <RichTextBox x:Name="txtCode" AcceptsReturn="True" AcceptsTab="True" Margin="0,0,0,30" TextChanged="txtCode_TextChanged" VerticalScrollBarVisibility="Auto">
+        <RichTextBox x:Name="txtCode" AcceptsReturn="True" AcceptsTab="True" Margin="0,0,0,30" VerticalScrollBarVisibility="Auto">
             
         </RichTextBox>
     </Grid>
