--- a/CenaPlus.Server/ServerMode/Contest/Status.xaml
+++ b/CenaPlus.Server/ServerMode/Contest/Status.xaml
@@ -33,7 +33,7 @@
                 <TextBlock Text="Memory used"></TextBlock>
                 <TextBlock Text="N/A" Style="{StaticResource Heading2}" Margin="0,0,0,20"></TextBlock>
                 <TextBlock Text="Source"></TextBlock>
-                <RichTextBox x:Name="txtSource" AcceptsReturn="True" Height="150" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Margin="0,0,0,20" IsReadOnly="True" TextChanged="txtSource_TextChanged"></RichTextBox>
+                <RichTextBox x:Name="txtSource" AcceptsReturn="True" Height="150" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Margin="0,0,0,20" IsReadOnly="True"></RichTextBox>
                 <Button Content="Rejudge"></Button>
             </StackPanel>
         </ScrollViewer>
