--- a/CenaPlus.Server/ServerMode/Tests.xaml
+++ b/CenaPlus.Server/ServerMode/Tests.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Style="{StaticResource ContentRoot}">
-        <ListBox x:Name="ContestListBox" SelectedValuePath="ID" Margin="0,0,0,30" SelectionChanged="ContestListBox_SelectionChanged">
+        <ListBox x:Name="ContestListBox" SelectedValuePath="ID" Margin="0,0,0,30" MouseDoubleClick="ContestListBox_MouseDoubleClick" SelectionChanged="ContestListBox_SelectionChanged">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <DockPanel>
@@ -18,9 +18,9 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <WrapPanel VerticalAlignment="Bottom">
-            <Button x:Name="CreateButton" Content="Create" Margin="0,0,10,0"></Button>
-            <Button x:Name="ModifyButton" IsEnabled="False" Content="Modify" Margin="0,0,10,0" Click="ModifyButton_Click"></Button>
-            <Button x:Name="DeleteButton" IsEnabled="False" Content="Delete" Margin="0,0,10,0"></Button>
+            <Button x:Name="btnCreate" Content="Create" Margin="0,0,10,0"></Button>
+            <Button x:Name="btnModify" IsEnabled="False" Content="Modify" Margin="0,0,10,0" Click="btnModify_Click"></Button>
+            <Button x:Name="btnDelete" IsEnabled="False" Content="Delete" Margin="0,0,10,0" Click="btnDelete_Click"></Button>
         </WrapPanel>
     </Grid>
 </UserControl>
