--- a/CenaPlus.Server/ServerMode/Contest/ProblemList.xaml
+++ b/CenaPlus.Server/ServerMode/Contest/ProblemList.xaml
@@ -7,20 +7,20 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="700">
     <Grid>
-        <ListView Margin="0,0,0,30" x:Name="ProblemListView">
+        <ListView Margin="0,0,0,30" x:Name="ProblemListView" SelectedValuePath="ID">
             <ListView.View>
                 <GridView x:Name="StatisticsGridView">
-                    <GridViewColumn Header="#" DisplayMemberBinding="{Binding Number}" Width="30"/>
+                    <GridViewColumn Header="#" DisplayMemberBinding="{Binding ID}" Width="30"/>
                     <GridViewColumn Header="Title" DisplayMemberBinding="{Binding Title}" Width="240"/>
                     <GridViewColumn Header="Test cases" DisplayMemberBinding="{Binding TestCasesCount}" Width="70"/>
-                    <GridViewColumn Header="Pts" DisplayMemberBinding="{Binding Point}" Width="70"/>
+                    <GridViewColumn Header="Pts" DisplayMemberBinding="{Binding Score}" Width="70"/>
                 </GridView>
             </ListView.View>
         </ListView>
         <WrapPanel VerticalAlignment="Bottom">
             <Button Content="Create" Margin="0,0,10,0" x:Name="btnCreate" Click="btnCreate_Click"></Button>
             <Button Content="Modify" Margin="0,0,10,0" x:Name="btnModify" Click="btnModify_Click"></Button>
-            <Button Content="Delete" Margin="0,0,10,0" x:Name="btnDelete"></Button>
+            <Button Content="Delete" Margin="0,0,10,0" x:Name="btnDelete" Click="btnDelete_Click"></Button>
         </WrapPanel>
     </Grid>
 </UserControl>
