--- a/CenaPlus.Client/Remote/Contest/Questions.xaml
+++ b/CenaPlus.Client/Remote/Contest/Questions.xaml
@@ -11,7 +11,7 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <DockPanel Height="50">
-                        <Image DockPanel.Dock="Left" Width="50" Height="50" Source="https://www.gravatar.com/avatar/159c4a0a78d0980aca8df9d781d1c755?d\=https://www.SmartOJ.com/img/Non_Avatar.png&amp;s\=50"></Image>
+                        <Image DockPanel.Dock="Left" Width="50" Height="50" Source="/CenaPlus.Client;component/Resources/DefaultAvatar.jpg"></Image>
                         <StackPanel HorizontalAlignment="Left">
                             <TextBlock Text="{Binding Description}" FontSize="18" Style="{StaticResource Heading2}" Width="315" Margin="10,0,0,0" />
                             <TextBlock Text="{Binding Details}" Width="315" Margin="10,0,0,0" />
