--- a/CenaPlus.Client/Remote/Home.xaml
+++ b/CenaPlus.Client/Remote/Home.xaml
@@ -16,7 +16,7 @@
         <ScrollViewer Margin="{StaticResource SplitLeft}" Width="150">
             <StackPanel>
                 <TextBlock Text="Profile" Style="{StaticResource Heading2}" />
-                <Image Height="100" Width="100" HorizontalAlignment="Left" Source="https://www.gravatar.com/avatar/159c4a0a78d0980aca8df9d781d1c755?d\=https://www.SmartOJ.com/img/Non_Avatar.png&amp;s\=100"/>
+                <Image Height="100" Width="100" HorizontalAlignment="Left" Source="/CenaPlus.Client;component/Resources/DefaultAvatar.jpg"/>
                 <TextBlock Text="Gasai Yuno" Width="100" HorizontalAlignment="Left" TextAlignment="Center"></TextBlock>
                 <TextBlock Text="User ID: 1" Margin="0,10,0,0"></TextBlock>
                 <TextBlock Text="User Group: Root"></TextBlock>
