--- a/CenaPlus.Client/Remote/Remote.xaml
+++ b/CenaPlus.Client/Remote/Remote.xaml
@@ -27,7 +27,7 @@
         </WrapPanel>
         <StackPanel x:Name="IdentificationPanel" HorizontalAlignment="Right" Width="280">
             <TextBlock x:Name="IdentificationTextBlock" Text="Choose a server from the left..." Style="{StaticResource Heading2}" Margin="0,0,0,10"></TextBlock>
-            <Image Height="100" Source="http://www.cenaplus.org/images/Logo.png" ></Image>
+            <Image Height="100" Source="/CenaPlus.Client;component/Resources/CenaPlusLogo.png" ></Image>
             <TextBlock Text="Username"></TextBlock>
             <TextBox x:Name="txtUserName" IsEnabled="False" Margin="0,0,0,10"></TextBox>
             <TextBlock Text="Password"></TextBlock>
