--- a/CenaPlus.Server/ServerMode/Contest/Problem/Code.xaml
+++ b/CenaPlus.Server/ServerMode/Contest/Problem/Code.xaml
@@ -7,7 +7,12 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Style="{StaticResource ContentRoot}">
-        <RichTextBox x:Name="txtCode" AcceptsReturn="True" AcceptsTab="True" Margin="0,0,0,30" VerticalScrollBarVisibility="Auto">
+        <WrapPanel>
+            <ComboBox x:Name="cbLanguage">
+                
+            </ComboBox>
+        </WrapPanel>
+        <RichTextBox x:Name="txtCode" AcceptsReturn="True" AcceptsTab="True" Margin="0,30,0,30" VerticalScrollBarVisibility="Auto">
             
         </RichTextBox>
     </Grid>
