--- a/CenaPlus.Client/Remote/Contest/Submit.xaml
+++ b/CenaPlus.Client/Remote/Contest/Submit.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Style="{StaticResource ContentRoot}">
         <WrapPanel MinWidth="200" HorizontalAlignment="Left">
-            <ComboBox Name="lstLanguage" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" SelectedIndex="0" Height="25" Margin="0,0,10,0" SelectedValuePath="Content"/>
+            <ComboBox Name="lstLanguage" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" SelectedIndex="0" Height="25" Margin="0,0,10,0"/>
             <Button Name="btnSubmit" Content="Submit" Width="75" Click="btnSubmit_Click"/>
         </WrapPanel>
         <TextBox Name="txtCode" Margin="0,35,0,0" AcceptsReturn="true"></TextBox>
