--- a/CenaPlus.Server/ServerMode/Contest/Problem/General.xaml
+++ b/CenaPlus.Server/ServerMode/Contest/Problem/General.xaml
@@ -15,6 +15,8 @@
                 <TextBox x:Name="txtTimeLimit" Margin="0,0,0,20"></TextBox>
                 <TextBlock Text="Memory limit (KB)" Margin="0,0,0,5"/>
                 <TextBox x:Name="txtMemoryLimit" Margin="0,0,0,20"></TextBox>
+                <TextBlock Text="Score" Margin="0,0,0,5"/>
+                <TextBox x:Name="txtScore" Margin="0,0,0,20"></TextBox>
                 <TextBlock Text="Language forbidden" Margin="0,0,0,5"/>
                 <ListBox x:Name="lbLanguageForbidden" Margin="0,0,0,20">
                     <ListBox.ItemTemplate>
@@ -23,7 +25,7 @@
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
-                <Button Content="Save changes"></Button>
+                <Button Name="btnSave" Content="Save changes" Click="btnSave_Click"></Button>
             </StackPanel>
         </ScrollViewer>
     </Grid>
