--- a/CenaPlus.Client/Local/Configuration.xaml
+++ b/CenaPlus.Client/Local/Configuration.xaml
@@ -7,12 +7,12 @@
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="700">
     <Grid Style="{StaticResource ContentRoot}">
-        <ListBox x:Name="TestCasesListBox" Width="300" HorizontalAlignment="Left">
+        <ListBox x:Name="TestCasesListBox" Width="280" HorizontalAlignment="Left">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
-                        <TextBlock Text="{Binding Title}" Style="{StaticResource Heading2}"></TextBlock>
-                        <TextBlock Text="{Binding Details}"></TextBlock>
+                        <TextBlock Text="{Binding Title}" Style="{StaticResource Heading2}" Margin="5,0,0,0"></TextBlock>
+                        <TextBlock Text="{Binding Details}" Margin="5,0,0,0"></TextBlock>
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
